[gd_scene load_steps=11 format=3 uid="uid://bixdifjd6wvlp"]

[ext_resource type="Texture2D" uid="uid://b3lqdu2u5hdap" path="res://art/icon.png" id="1_je8ge"]
[ext_resource type="StyleBox" uid="uid://bd0nh4dn8546k" path="res://theme/theme_list_item.tres" id="1_qkagd"]
[ext_resource type="Script" path="res://scripts/control_list_item.gd" id="1_xs8h4"]
[ext_resource type="StyleBox" uid="uid://bimo842oeotkh" path="res://theme/theme_list_item_selected.tres" id="3_nqhwh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p0nq3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k224l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h52e3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_43k2s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gjgq4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_02pdk"]

[node name="ControlListItem" type="PanelContainer"]
light_mask = 0
custom_minimum_size = Vector2(200, 26)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2
size_flags_vertical = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_styles/panel = ExtResource("1_qkagd")
script = ExtResource("1_xs8h4")

[node name="Selected" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(20, 31)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2
theme_override_styles/panel = ExtResource("3_nqhwh")

[node name="Container" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/separation = 4

[node name="Icon" type="TextureRect" parent="Container"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("1_je8ge")
stretch_mode = 3

[node name="Name" type="Label" parent="Container"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.133196, 0.133196, 0.133196, 1)
text = "Control List Item
"
text_overrun_behavior = 1

[node name="Button" type="Button" parent="Container"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0.133196, 0.133196, 0.133196, 1)
theme_override_colors/font_color = Color(0.556863, 0.556863, 0.556863, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/focus = SubResource("StyleBoxEmpty_p0nq3")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_k224l")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_h52e3")
theme_override_styles/hover = SubResource("StyleBoxEmpty_43k2s")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gjgq4")
theme_override_styles/normal = SubResource("StyleBoxEmpty_02pdk")
action_mode = 0
keep_pressed_outside = true
shortcut_feedback = false
shortcut_in_tooltip = false
text = "âœŽ"
flat = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="mouse_entered" from="Container/Button" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Container/Button" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Container/Button" to="." method="_on_button_clicked"]
